--- a/src/pages/index/index.marko
+++ b/src/pages/index/index.marko
@@ -1,30 +1,25 @@
-<app-layout title="Welcome to Marko">
-  <mouse-mask.container>
-    <header>
-      <img.logo src="./logo.svg" alt="Marko"/>
-    </header>
-    <main>
-      <p>Edit <code>./pages/index.marko</code> and save to reload.</p>
-      <a href="https://markojs.com/docs/getting-started">
-        Learn Marko
-      </a>
-    </main>
-  </mouse-mask>
-</app-layout>
 
-style {
-  .container {
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-size:2em; 
-    color: #fff;
-    background: #111;
-    height:100%;
-    width:100%;
-  }
-  img.logo {
-    width:400px;
-  }
-}
+<html>
+  <head>
+    <title>
+      Welcome | Marko Color Picker
+    </title>
+  </head>
+  <body>
+    <h1>
+      Welcome to the Color Picker!
+    </h1>
+    <color-picker colors=[
+      '#333745',
+      '#E63462',
+      '#FE5F55',
+      '#C7EFCF',
+      '#EEF5DB',
+      '#00B4A6',
+      '#007DB6',
+      '#FFE972',
+      '#9C7671',
+      '#0C192B'
+    ] />
+  </body>
+</html>
