wiring up component to index

--- a/src/components/color-picker/index.marko
+++ b/src/components/color-picker/index.marko
@@ -1,5 +1,6 @@
 <div>
     <color-header color=state.selectedColor />
+    <color-footer colors=state.colors on-color-selected('handleColorSelected') />
 </div>
 
 <ul>
