fixed logic to work correctly

--- a/src/components/color-picker/index.marko
+++ b/src/components/color-picker/index.marko
@@ -9,6 +9,10 @@ class {
             colors
         };
     }
+
+    handleColorSelected(color) {
+        this.state.selectedColor = color;
+    }
 }
 
 <div>
