--- a/src/components/color-footer/style.css
+++ b/src/components/color-footer/style.css
@@ -1,6 +1,7 @@
 .color-footer {
     width: 200px;
     height: 100px;
+    margin: auto;
     border-radius: 0px 0px 20px 20px;
     font: 30px Arial;
     display: flex;
@@ -14,8 +15,9 @@
     margin: 5px 0px 0px 20px;
 }
 .color-selection-container input {
+    width: 75%;
     margin-top: 8px;
-    border-radius: 0px;
+    border-radius: 0px 0px 0px 0px;
     border-width: 0px 0px 1px 0px;
     outline: none;
     color: #a9a9a9;
