--- a/src/components/color-header/index.marko
+++ b/src/components/color-header/index.marko
@@ -2,6 +2,7 @@ style {
     .color-header {
         width: 200px;
         height: 100px;
+        margin: auto;
         border-radius: 20px 20px 0 0;
         font: 30px Arial;
         display: flex;
