--- a/src/components/color-picker/index.marko
+++ b/src/components/color-picker/index.marko
@@ -15,18 +15,11 @@ class {
     }
 }
 
+<!-- similar to React with custom and self-ending tags -->
 <div>
     <color-header color=state.selectedColor />
     <color-footer colors=state.colors on-color-selected('handleColorSelected') />
 </div>
-
-<!-- <ul>
-    <for|color| of=input.colors>
-        <li style={color: color}>
-            ${color}
-        </li>
-    </for>
-</ul> -->
 
 
 
