--- a/src/pages/index/index.marko
+++ b/src/pages/index/index.marko
@@ -1,4 +1,3 @@
-
 <html>
   <head>
     <title>
@@ -6,9 +5,10 @@
     </title>
   </head>
   <body>
-    <h1>
+    <h1 style={ textAlign: 'center' }>
       Welcome to the Color Picker!
     </h1>
+    <!-- Custom tag 'color-picker' corresponds with 'color-picker' folder -->
     <color-picker colors=[
       '#333745',
       '#E63462',
