wire count colors clicks func

--- a/src/components/color-header/index.marko
+++ b/src/components/color-header/index.marko
@@ -17,7 +17,7 @@ style {
 }
 
 <!-- Marko uses "$" to start single-line JS -- For Multi-line use "$ { JS here }" -->
-$ const color = input.color;
+$ const color = input.color.color;
 
 <div.color-header style={backgroundColor: color}>
     <p>
