--- a/src/pages/index/index.marko
+++ b/src/pages/index/index.marko
@@ -10,16 +10,16 @@
     </h1>
     <!-- Custom tag 'color-picker' corresponds with 'color-picker' folder -->
     <color-picker colors=[
-      '#333745',
-      '#E63462',
-      '#FE5F55',
-      '#C7EFCF',
-      '#EEF5DB',
-      '#00B4A6',
-      '#007DB6',
-      '#FFE972',
-      '#9C7671',
-      '#0C192B'
+      { color: '#333745', counter: 0 },
+      { color: '#E63462', counter: 0 },
+      { color: '#FE5F55', counter: 0 },
+      { color: '#C7EFCF', counter: 0 },
+      { color: '#EEF5DB', counter: 0 },
+      { color: '#00B4A6', counter: 0 },
+      { color: '#007DB6', counter: 0 },
+      { color: '#FFE972', counter: 0 },
+      { color: '#9C7671', counter: 0 },
+      { color: '#0C192B', counter: 0 },
     ] />
   </body>
 </html>
