--- a/src/pages/index/index.marko
+++ b/src/pages/index/index.marko
@@ -5,7 +5,7 @@
     </title>
   </head>
   <body>
-    <h1 style={ textAlign: 'center' }>
+    <h1 style={ textAlign: 'center', fontSize: '45px' }>
       Welcome to the Color Picker!
     </h1>
     <!-- Custom tag 'color-picker' corresponds with 'color-picker' folder -->
